--- a/2_chessboard/chessboard_start.html
+++ b/2_chessboard/chessboard_start.html
@@ -22,48 +22,48 @@
         <td class="square">
           &#9820;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9822;
         </td>
         <td class="square">
           &#9821;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9819;
         </td>
         <td class="square">
           &#9818;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9821;
         </td>
         <td class="square">
           &#9822;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9820;
         </td>
       </tr>
       <tr class="rank">
-        <td class="square dark_square">
+        <td class="dark">
           &#9823;
         </td>
         <td class="square">
           &#9823;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9823;
         </td>
         <td class="square">
           &#9823;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9823;
         </td>
         <td class="square">
           &#9823;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9823;
         </td>
         <td class="square">
@@ -78,100 +78,48 @@
         <td class="square">
           &nbsp;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &nbsp;
         </td>
         <td class="square">
           &nbsp;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &nbsp;
         </td>
         <td class="square">
           &nbsp;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &nbsp;
         </td>
         <td class="square">
           &nbsp;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &nbsp;
         </td>
       </tr>
       <tr class="rank">
-        <td class="square dark_square">
+        <td class="dark">
           &nbsp;
         </td>
         <td class="square">
           &nbsp;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &nbsp;
         </td>
         <td class="square">
           &nbsp;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &nbsp;
         </td>
         <td class="square">
           &nbsp;
         </td>
-        <td class="square dark_square">
-          &nbsp;
-        </td>
-        <td class="square">
-          &nbsp;
-        </td>
-      </tr>
-      <tr class="rank">
-        <td class="square">
-          &nbsp;
-        </td>
-        <td class="square dark_square">
-          &nbsp;
-        </td>
-        <td class="square">
-          &nbsp;
-        </td>
-        <td class="square dark_square">
-          &nbsp;
-        </td>
-        <td class="square">
-          &nbsp;
-        </td>
-        <td class="square dark_square">
-          &nbsp;
-        </td>
-        <td class="square">
-          &nbsp;
-        </td>
-        <td class="square dark_square">
-          &nbsp;
-        </td>
-      </tr>
-      <tr class="rank">
-        <td class="square dark_square">
-          &nbsp;
-        </td>
-        <td class="square">
-          &nbsp;
-        </td>
-        <td class="square dark_square">
-          &nbsp;
-        </td>
-        <td class="square">
-          &nbsp;
-        </td>
-        <td class="square dark_square">
-          &nbsp;
-        </td>
-        <td class="square">
-          &nbsp;
-        </td>
-        <td class="square dark_square">
+        <td class="dark">
           &nbsp;
         </td>
         <td class="square">
@@ -180,50 +128,102 @@
       </tr>
       <tr class="rank">
         <td class="square">
+          &nbsp;
+        </td>
+        <td class="dark">
+          &nbsp;
+        </td>
+        <td class="square">
+          &nbsp;
+        </td>
+        <td class="dark">
+          &nbsp;
+        </td>
+        <td class="square">
+          &nbsp;
+        </td>
+        <td class="dark">
+          &nbsp;
+        </td>
+        <td class="square">
+          &nbsp;
+        </td>
+        <td class="dark">
+          &nbsp;
+        </td>
+      </tr>
+      <tr class="rank">
+        <td class="dark">
+          &nbsp;
+        </td>
+        <td class="square">
+          &nbsp;
+        </td>
+        <td class="dark">
+          &nbsp;
+        </td>
+        <td class="square">
+          &nbsp;
+        </td>
+        <td class="dark">
+          &nbsp;
+        </td>
+        <td class="square">
+          &nbsp;
+        </td>
+        <td class="dark">
+          &nbsp;
+        </td>
+        <td class="square">
+          &nbsp;
+        </td>
+      </tr>
+      <tr class="rank">
+        <td class="square">
           &#9817;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9817;
         </td>
         <td class="square">
           &#9817;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9817;
         </td>
         <td class="square">
           &#9817;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9817;
         </td>
         <td class="square">
           &#9817;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9817;
         </td>
       </tr>
       <tr class="rank">
-        <td class="square dark_square">
+        <td class="dark">
           &#9814;
         </td>
         <td class="square">
           &#9816;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9815;
         </td>
         <td class="square">
           &#9813;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9812;
         </td>
         <td class="square">
           &#9815;
         </td>
-        <td class="square dark_square">
+        <td class="dark">
           &#9816;
         </td>
         <td class="square">
