--- a/5_canvas_styling/canvas_styling_start.html
+++ b/5_canvas_styling/canvas_styling_start.html
@@ -2,15 +2,8 @@
 <html>
 <head>
   <title>Business Model Canvas</title>
-  <style>
-    body {
-      font-size: 6pt;
-    }
+  <link rel="stylesheet" href="my_canvas_styles.css"
 
-    td {
-      vertical-align: top;
-    }
-  </style>
 </head>
 <body>
   <table class="canvas">
